--- a/loeng01/index.html
+++ b/loeng01/index.html
@@ -14,7 +14,7 @@
 <p>
     Kes <strong>hommikuti</strong> külas käib
 </p>  
-<a href="https://postimees.ee" target="_blank" >Loe uudiseid</a>
+<a href="index1.html" target="_blank" >Loe lähemalt</a>
 <img src="Ottokas.jpg" alt="Ottokas trennis" width="600">
 </body>
 </html>
