--- a/loeng02/parool.html
+++ b/loeng02/parool.html
@@ -18,7 +18,9 @@
             <label for="salasona">Salasõna:</label><br>
             <input type="password" id="salasona" name="salasona">
         </div>
-        <input type="submit" value="Logi sisse">
+        <div class="sisestus">
+            <input type="submit" value="Logi sisse">
+        </div>
     </form>
 </body>
 </html>
