loengo2 kodutöö disainimuutused

--- a/loeng02/login.html
+++ b/loeng02/login.html
@@ -7,7 +7,7 @@
     <title>login</title>
     <link rel="stylesheet" href="login.css">
 </head>
-<body>
+<body class="pohitaust">
     <div class="eralduskuubik">
         <h1>Login</h1>
         <form action="#" method="get">
@@ -24,7 +24,7 @@
                 <input type="password" id="salasona" name="salasona"
             </div>
             <div>
-                <label for="salasona">Salasõna teist korda:</label>
+                <label for="salasona"><b>Salasõna teist korda:</b></label>
                 <input type="password" id="salasona teist korda" name="salasona teist korda"
             </div>
             <div>
