--- a/loeng02/login.html
+++ b/loeng02/login.html
@@ -13,19 +13,19 @@
         <form action="#" method="get">
             <div>
                 <label for="kasutaja">Kasutaja:</label>
-                <input type="text" id="kasutaja" name="kasutaja"
+                <input placeholder="kasutaja" type="text" id="kasutaja" name="kasutaja">
             </div>
             <div>
                 <label for="nimi">Nimi:</label>
-                <input type="text" id="nimi" name="nimi"
+                <input type="text" id="nimi" name="nimi">
             </div>
             <div>
                 <label for="salasona">Salasõna:</label>
-                <input type="password" id="salasona" name="salasona"
+                <input type="password" id="salasona" name="salasona">
             </div>
             <div>
                 <label for="salasona"><b>Salasõna teist korda:</b></label>
-                <input type="password" id="salasona teist korda" name="salasona teist korda"
+                <input type="password" id="salasona teist korda" name="salasona teist korda">
             </div>
             <div>
                 <input type="checkbox"> Olen nõus enda infot saatma 
