--- a/loeng03/vanaduudised.html
+++ b/loeng03/vanaduudised.html
@@ -9,10 +9,7 @@
     <link rel="stylesheet" href="vanaduudised.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Special+Elite&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;700&display=swap" rel="stylesheet">
@@ -27,7 +24,7 @@
         <div class="blokk1">
             <div class="blokkideblokk">
                 <h3>KT: 2021. aasta kohalike valimiste võitja oli KIKRE</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente voluptatum quas mollitia.
                 </p>
                 <a href="http://" target="_blank">Loe edasi</a>
             </div>
@@ -43,7 +40,7 @@
         <div class="blokk3">
             <div class="blokkideblokk">
                 <h3>London põnevil: kelle Põhjaerakond seekord abitrattaks võtab</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente voluptatum quas mollitia.
                 </p>
                 <a href="http://" target="_blank">Loe edasi</a>
             </div>
@@ -59,7 +56,7 @@
         <div class="blokk5">
             <div class="blokkideblokk">
                 <h3>KIKRE lootused on kõrgel</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente voluptatum quas mollitia.
                 </p>
                 <a href="http://" target="_blank">Loe edasi</a>
             </div>
