--- a/loeng04/index.html
+++ b/loeng04/index.html
@@ -22,7 +22,18 @@
         </ul>
     </nav>
     <main>
-        <aside></aside>
+        <aside class="külg_pealkiri">
+            <h2>TEENUSED</h2>
+            <ul>
+                <li><a href="#">LÕIKELILLED</a></li>
+                <li><a href="#">TOALILLED</a></li>
+                <li><a href="#">LILLEKIMBUD</a></li>
+                <li><a href="#">LILLESEADED</a></li>
+                <li><a href="#">LEINASEADED</a></li>
+                <li><a href="#">KINGITUSED</a></li>
+                <li><a href="#">KÄSITÖÖ</a></li>
+            </ul>
+        </aside>
         <section>
             <div class="sisu-pealkiri">
                 <h2>Võta meiega ühendust</h2>
@@ -45,6 +56,27 @@
             </a>
         </aside>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="footer_nav">
+            <div><br>
+                <a href="mailto:info@magnolia.ee">info@magnolia.ee</a>
+                <a href="#">Magnolia Facebook</a>
+                <a href="#">Magnolia Instagram</a>
+                <br>
+                <p>
+                    Magnolia OÜ - Siidi tee 1, Põlva vald, Põlvamaa 61915
+                </p>
+            </div>
+        </section>
+        <section class="footer_credits">
+            <div>
+                <p>While using this site, you agree to have read and accepted our <b>terms of use</b>, <b>cookie</b> and
+                    <b>privacy policy.</b>
+                    <br>
+                    Copyright 2021 by Refsnes Data. All Rights Reserved.
+                </p>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
