--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,7 +23,7 @@
         <div class="card-body">
                 <h4>Pildigalerii</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur praesentium expedita quia commodi iusto quidem veniam temporibus, ipsum eligendi vero aperiam, consequatur accusamus dicta quasi, deleniti perspiciatis maiores nobis architecto?</p>
-                <a href="/loeng05/index.html" class="btn btn-primary">Vaata projekti</a>
+                <a href="https://eevakl.github.io/Veebiarendus/loeng05/index.html" class="btn btn-primary">Vaata projekti</a>
         </div>
     </div>
     <div class="col-sm-6 col-lg-4">
