--- a/loeng04/index.html
+++ b/loeng04/index.html
@@ -14,7 +14,7 @@
         <div>Ostukorv</div>
     </header>
     <nav>
-        <ul>
+        <ul class="mobile">
             <li><a href="#">Pealeht</a></li>
             <li><a href="#">Teenused</a></li>
             <li><a href="#">E-pood</a></li>
