--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,23 +18,29 @@
   
 <div class="container">
   <div class="row">
-    <div class="col-sm-6 col-lg-4 card">
-        <img class="card-img-top" src="./assets/roosid.jpeg" alt="">
+    <div class="col-sm-6 col-lg-6 card">
+        <img class="card-img-top" src="./assets/vanad_uudised.jpeg" alt="">
         <div class="card-body">
                 <h4>Pildigalerii</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur praesentium expedita quia commodi iusto quidem veniam temporibus, ipsum eligendi vero aperiam, consequatur accusamus dicta quasi, deleniti perspiciatis maiores nobis architecto?</p>
-                <a href="https://eevakl.github.io/loeng05/index.html" class="btn btn-primary">Vaata projekti</a>
+                <a href="https://eevakl.github.io/loeng03/vanaduudised.html" class="btn btn-primary">Vaata projekti</a>
         </div>
     </div>
-    <div class="col-sm-6 col-lg-4">
-      <h3>Column 2</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    <div class="col-sm-6 col-lg-6 card">
+        <img class="card-img-top" src="./assets/Magnolia_kontaktid.jpeg" alt="">
+        <div class="card-body">
+            <h4>Pildigalerii</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur praesentium expedita quia commodi iusto quidem veniam temporibus, ipsum eligendi vero aperiam, consequatur accusamus dicta quasi, deleniti perspiciatis maiores nobis architecto?</p>
+            <a href="https://eevakl.github.io/loeng04/magnolia.html#" class="btn btn-primary">Vaata projekti</a>
+        </div>   
     </div>
-    <div class="col-sm-6 col-lg-4">
-      <h3>Column 3</h3>        
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    <div class="col-sm-6 col-lg-6 card">
+        <img class="card-img-top" src="./assets/koerte_varvimine.jpeg" alt="">
+        <div class="card-body">
+            <h4>Pildigalerii</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur praesentium expedita quia commodi iusto quidem veniam temporibus, ipsum eligendi vero aperiam, consequatur accusamus dicta quasi, deleniti perspiciatis maiores nobis architecto?</p>
+            <a href="https://eevakl.github.io/loeng04/index.html" class="btn btn-primary">Vaata projekti</a>
+        </div>
     </div>
   </div>
 </div>
