--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,7 +18,7 @@
   
 <div class="container">
   <div class="row">
-    <div class="col-sm-6 col-lg-6 card">
+    <div class="col-ms-12 col-lg-6 card">
         <img class="card-img-top" src="./assets/vanad_uudised.jpeg" alt="">
         <div class="card-body">
                 <h4>Pildigalerii</h4>
@@ -26,7 +26,7 @@
                 <a href="https://eevakl.github.io/loeng03/vanaduudised.html" class="btn btn-primary">Vaata projekti</a>
         </div>
     </div>
-    <div class="col-sm-6 col-lg-6 card">
+    <div class="col-sm-12 col-lg-6 card">
         <img class="card-img-top" src="./assets/Magnolia_kontaktid.jpeg" alt="">
         <div class="card-body">
             <h4>Pildigalerii</h4>
@@ -34,7 +34,7 @@
             <a href="https://eevakl.github.io/loeng04/magnolia.html#" class="btn btn-primary">Vaata projekti</a>
         </div>   
     </div>
-    <div class="col-sm-6 col-lg-6 card">
+    <div class="col-sm-12 col-lg-6 card">
         <img class="card-img-top" src="./assets/koerte_varvimine.jpeg" alt="">
         <div class="card-body">
             <h4>Pildigalerii</h4>
