--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,7 +23,7 @@
         <div class="card-body">
                 <h4>Pildigalerii</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur praesentium expedita quia commodi iusto quidem veniam temporibus, ipsum eligendi vero aperiam, consequatur accusamus dicta quasi, deleniti perspiciatis maiores nobis architecto?</p>
-                <a href="https://eevakl.github.io/loeng03/vanaduudised.html" class="btn btn-primary">Vaata projekti</a>
+                <a href="https://eevakl.github.io/Veebiarendus/loeng03/vanaduudised.html" class="btn btn-primary">Vaata projekti</a>
         </div>
     </div>
     <div class="col-sm-12 col-lg-6 card">
@@ -31,7 +31,7 @@
         <div class="card-body">
             <h4>Pildigalerii</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur praesentium expedita quia commodi iusto quidem veniam temporibus, ipsum eligendi vero aperiam, consequatur accusamus dicta quasi, deleniti perspiciatis maiores nobis architecto?</p>
-            <a href="https://eevakl.github.io/loeng04/magnolia.html#" class="btn btn-primary">Vaata projekti</a>
+            <a href="https://eevakl.github.io/Veebiarendus/loeng04/magnolia.html#" class="btn btn-primary">Vaata projekti</a>
         </div>   
     </div>
     <div class="col-sm-12 col-lg-6 card">
@@ -39,7 +39,7 @@
         <div class="card-body">
             <h4>Pildigalerii</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur praesentium expedita quia commodi iusto quidem veniam temporibus, ipsum eligendi vero aperiam, consequatur accusamus dicta quasi, deleniti perspiciatis maiores nobis architecto?</p>
-            <a href="https://eevakl.github.io/loeng04/index.html" class="btn btn-primary">Vaata projekti</a>
+            <a href="https://eevakl.github.io/Veebiarendus/loeng04/index.html" class="btn btn-primary">Vaata projekti</a>
         </div>
     </div>
   </div>
