--- a/colors/index.html
+++ b/colors/index.html
@@ -34,7 +34,7 @@
     </nav>
     <main>
         <div class="missionclass">
-            <div class="mission">
+            <div class="col-12 col-lg-6 mission">
                 <h2>Eriti magus väärtuspakkumine: Lorem ipsum dolor sit, amet consectetur adipisicing elit. </h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nesciunt quam deserunt eius nobis
                     labore quaerat neque illum veritatis dolore, qui culpa, modi id molestias iure laborum repellendus.
@@ -48,8 +48,8 @@
                     Quis ipsa expedita in inventore! Ratione alias magni sint ea dolorum quasi dolore quod ducimus
                     commodi nemo?</p>
             </div>
-            <div class="signaturegraphics">
-                <img src="./assets/colours_signature_teal_green.png" alt="" width="350">
+            <div class="d-none d-lg-block col-lg-6 signaturegraphics">
+                <img class="signature" src="./assets/colours_signature_teal_green.png" alt="" width="350" height="500">
             </div>
         </div>
         <div class="introphotos">
