--- a/colors/index.html
+++ b/colors/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colours</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,8 +38,9 @@
     </nav>
     <main>
         <div class="missionclass">
-            <div class="col-12 col-lg-6 mission">
+            <div class="col-12 col-lg-9 mission">
                 <h2>Eriti magus väärtuspakkumine: Lorem ipsum dolor sit, amet consectetur adipisicing elit. </h2>
+                <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nesciunt quam deserunt eius nobis
                     labore quaerat neque illum veritatis dolore, qui culpa, modi id molestias iure laborum repellendus.
                     Non,
@@ -48,13 +53,14 @@
                     Quis ipsa expedita in inventore! Ratione alias magni sint ea dolorum quasi dolore quod ducimus
                     commodi nemo?</p>
             </div>
-            <div class="d-none d-lg-block col-lg-6 signaturegraphics">
+            <div class="d-none d-lg-block col-lg-3 signaturegraphics">
                 <img class="signature" src="./assets/colours_signature_teal_green.png" alt="" width="350" height="500">
             </div>
         </div>
         <div class="introphotos">
             <div>
                 <H2>Siia tulevad näidiste fotod</H2>
+                <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium omnis sunt, architecto quaerat
                     asperiores quia! Velit perspiciatis ipsum ratione dignissimos quasi maiores fugiat possimus, aperiam
                     obcaecati ab a vitae non.</p>
