--- a/colours/index.html
+++ b/colours/index.html
@@ -37,7 +37,7 @@
         </div>
     </nav>
     <main>
-        <div class="missionclass">
+        <div class="missionclass row">
             <div class="col-12 col-lg-9 mission">
                 <h2>Eriti magus väärtuspakkumine: Lorem ipsum dolor sit, amet consectetur adipisicing elit. </h2>
                 <hr>
@@ -57,9 +57,71 @@
                 <img class="signature" src="./assets/colours_signature_teal_green.png" alt="" width="350" height="500">
             </div>
         </div>
-        <div class="introphotos">
-            <div>
+        <div class="introduction row">
+            <div class="col-12 col-lg-6">
+                <img src="" alt="">
+            </div>
+            <div class="col-12 col-lg-6">
+                <h2>Kiire ja konkreetne tutvustus: Lorem ipsum dolor sit, amet consectetur adipisicing elit. </h2>
+                <hr>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nesciunt quam deserunt eius nobis
+                    labore quaerat neque illum veritatis dolore, qui culpa, modi id molestias iure laborum repellendus.
+                    Non,
+                    iste.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus, dolores eos illo, dicta voluptatum
+                    pariatur aspernatur quibusdam cupiditate, odit magnam assumenda alias. Modi, rerum facere? Itaque
+                    fugiat
+                    explicabo fuga minima.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, beatae quaerat! Saepe, eaque.
+                    Quis ipsa expedita in inventore! Ratione alias magni sint ea dolorum quasi dolore quod ducimus
+                    commodi nemo?</p>
+            </div>
+        </div>
+        <div class="introphotos row">
+            <div class="col-12 col-lg-4">
+                <img src="" alt="">
+            </div>
+            <div class="col-12 col-lg-4">
                 <H2>Siia tulevad näidiste fotod</H2>
+                <hr>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium omnis sunt, architecto quaerat
+                    asperiores quia! Velit perspiciatis ipsum ratione dignissimos quasi maiores fugiat possimus, aperiam
+                    obcaecati ab a vitae non.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis repellendus exercitationem neque
+                    nulla. Delectus culpa veniam quasi nam nemo, necessitatibus tempora corporis autem sunt aliquam?
+                    Vitae repudiandae omnis eos nisi?</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit aperiam, odit alias nobis nihil
+                    quibusdam soluta ratione, voluptate sint, voluptatibus qui voluptatum. Deserunt, cumque recusandae
+                    corporis ex consequatur harum dolor!</p>
+            </div>
+            <div class="col-12 col-lg-4">
+                <img src="" alt="">
+            </div>
+        </div>
+        <div class="extrapart row">
+            <div class="col-12 col-lg-6">
+                <H2>Lisainfod</H2>
+                <hr>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium omnis sunt, architecto quaerat
+                    asperiores quia! Velit perspiciatis ipsum ratione dignissimos quasi maiores fugiat possimus, aperiam
+                    obcaecati ab a vitae non.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis repellendus exercitationem neque
+                    nulla. Delectus culpa veniam quasi nam nemo, necessitatibus tempora corporis autem sunt aliquam?
+                    Vitae repudiandae omnis eos nisi?</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit aperiam, odit alias nobis nihil
+                    quibusdam soluta ratione, voluptate sint, voluptatibus qui voluptatum. Deserunt, cumque recusandae
+                    corporis ex consequatur harum dolor!</p>
+            </div>
+            <div class="col-12 col-lg-6">
+                <img src="" alt="">
+            </div>
+        </div>
+        <div class="lastpart row">
+            <div class="col-12 col-lg-6">
+                <img src="" alt="">
+            </div>
+            <div class="col-12 col-lg-6">
+                <H2>Lisainfod</H2>
                 <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium omnis sunt, architecto quaerat
                     asperiores quia! Velit perspiciatis ipsum ratione dignissimos quasi maiores fugiat possimus, aperiam
