--- a/colours/index.html
+++ b/colours/index.html
@@ -62,7 +62,7 @@
                 <img src="" alt="">
             </div>
             <div class="col-12 col-lg-6">
-                <h2>Kiire ja konkreetne tutvustus: Lorem ipsum dolor sit, amet consectetur adipisicing elit. </h2>
+                <h2>Kiire ja konkreetne tutvustus</h2>
                 <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nesciunt quam deserunt eius nobis
                     labore quaerat neque illum veritatis dolore, qui culpa, modi id molestias iure laborum repellendus.
@@ -121,7 +121,7 @@
                 <img src="" alt="">
             </div>
             <div class="col-12 col-lg-6">
-                <H2>Lisainfod</H2>
+                <H2>Veel Lisainfot</H2>
                 <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium omnis sunt, architecto quaerat
                     asperiores quia! Velit perspiciatis ipsum ratione dignissimos quasi maiores fugiat possimus, aperiam
@@ -144,11 +144,20 @@
                 <li> <a href="#"><i class="fab fa-linkedin"></i></a></li>
             </ul>
         </div>
-        <div class="flex-container">
-            <div>siia tulevad kontaktandmed</div>
-            <div>siia tuleb copywrite ja tingimused</div>
-        </div>
-
+        <section>
+            <div class="footer_nav">
+                <p>
+                    Colours Sisustus OÜ - Mööblimaja 1, Tartu, Tartumaa 61915
+                </p>
+            </div>
+            <div class="footer_credits">
+                <p>While using this site, you agree to have read and accepted our <b>terms of use</b>, <b>cookie</b> and
+                    <b>privacy policy.</b>
+                    <br>
+                    Copyright 2021 by Colours. All Rights Reserved.
+                </p>
+            </div>
+        </section>
     </footer>
 </body>
 
