Colours upd pildid

--- a/colours/index.html
+++ b/colours/index.html
@@ -39,7 +39,8 @@
     <main>
         <div class="missionclass row">
             <div class="col-12 col-lg-9 mission">
-                <h2>Eriti magus väärtuspakkumine: Lorem ipsum dolor sit, amet consectetur adipisicing elit. </h2>
+                <h2>Est alias perspiciatis et quod quis et omnis amet: Lorem ipsum dolor sit, amet consectetur
+                    adipisicing elit. </h2>
                 <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nesciunt quam deserunt eius nobis
                     labore quaerat neque illum veritatis dolore, qui culpa, modi id molestias iure laborum repellendus.
@@ -49,9 +50,6 @@
                     pariatur aspernatur quibusdam cupiditate, odit magnam assumenda alias. Modi, rerum facere? Itaque
                     fugiat
                     explicabo fuga minima.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, beatae quaerat! Saepe, eaque.
-                    Quis ipsa expedita in inventore! Ratione alias magni sint ea dolorum quasi dolore quod ducimus
-                    commodi nemo?</p>
             </div>
             <div class="d-none d-lg-block col-lg-3 signaturegraphics">
                 <img class="signature" src="./assets/colours_signature_teal_green.png" alt="" width="350" height="500">
@@ -59,19 +57,15 @@
         </div>
         <div class="introduction row">
             <div class="col-12 col-lg-6">
-                <img src="" alt="">
+                <img class="image1" src="./assets/Teal Fuchsia 2.jpg" alt="">
             </div>
-            <div class="col-12 col-lg-6">
-                <h2>Kiire ja konkreetne tutvustus</h2>
+            <div class="col-12 col-lg-6 sissejuhatus">
+                <h2>Non maiores delectus Rem</h2>
                 <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nesciunt quam deserunt eius nobis
                     labore quaerat neque illum veritatis dolore, qui culpa, modi id molestias iure laborum repellendus.
                     Non,
                     iste.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus, dolores eos illo, dicta voluptatum
-                    pariatur aspernatur quibusdam cupiditate, odit magnam assumenda alias. Modi, rerum facere? Itaque
-                    fugiat
-                    explicabo fuga minima.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, beatae quaerat! Saepe, eaque.
                     Quis ipsa expedita in inventore! Ratione alias magni sint ea dolorum quasi dolore quod ducimus
                     commodi nemo?</p>
@@ -79,28 +73,22 @@
         </div>
         <div class="introphotos row">
             <div class="col-12 col-lg-4">
-                <img src="" alt="">
+                <img class="image2" src="./assets/Teal Fuchsia.jpg" alt="">
             </div>
-            <div class="col-12 col-lg-4">
-                <H2>Siia tulevad näidiste fotod</H2>
+            <div class="col-12 col-lg-4 introfotod">
+                <H2>At voluptatum earum Aut asperiores</H2>
                 <hr>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium omnis sunt, architecto quaerat
-                    asperiores quia! Velit perspiciatis ipsum ratione dignissimos quasi maiores fugiat possimus, aperiam
-                    obcaecati ab a vitae non.</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis repellendus exercitationem neque
                     nulla. Delectus culpa veniam quasi nam nemo, necessitatibus tempora corporis autem sunt aliquam?
                     Vitae repudiandae omnis eos nisi?</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit aperiam, odit alias nobis nihil
-                    quibusdam soluta ratione, voluptate sint, voluptatibus qui voluptatum. Deserunt, cumque recusandae
-                    corporis ex consequatur harum dolor!</p>
             </div>
             <div class="col-12 col-lg-4">
-                <img src="" alt="">
+                <img class="image2" src="./assets/Teal kardin.jpg" alt="">
             </div>
         </div>
         <div class="extrapart row">
-            <div class="col-12 col-lg-6">
-                <H2>Lisainfod</H2>
+            <div class="col-12 col-lg-6 lisaosa">
+                <H2>Aut nulla beatae aut quod</H2>
                 <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium omnis sunt, architecto quaerat
                     asperiores quia! Velit perspiciatis ipsum ratione dignissimos quasi maiores fugiat possimus, aperiam
@@ -108,27 +96,21 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis repellendus exercitationem neque
                     nulla. Delectus culpa veniam quasi nam nemo, necessitatibus tempora corporis autem sunt aliquam?
                     Vitae repudiandae omnis eos nisi?</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit aperiam, odit alias nobis nihil
-                    quibusdam soluta ratione, voluptate sint, voluptatibus qui voluptatum. Deserunt, cumque recusandae
-                    corporis ex consequatur harum dolor!</p>
             </div>
             <div class="col-12 col-lg-6">
-                <img src="" alt="">
+                <img class="image1" src="./assets/Teal and pink books.jpg" alt="">
             </div>
         </div>
         <div class="lastpart row">
             <div class="col-12 col-lg-6">
-                <img src="" alt="">
+                <img class="image1" src="./assets/teal rosepink copper.jpg" alt="">
             </div>
-            <div class="col-12 col-lg-6">
-                <H2>Veel Lisainfot</H2>
+            <div class="col-12 col-lg-6 viimaneosa">
+                <H2>Qui veritatis beatae nam harum dolores</H2>
                 <hr>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium omnis sunt, architecto quaerat
                     asperiores quia! Velit perspiciatis ipsum ratione dignissimos quasi maiores fugiat possimus, aperiam
                     obcaecati ab a vitae non.</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis repellendus exercitationem neque
-                    nulla. Delectus culpa veniam quasi nam nemo, necessitatibus tempora corporis autem sunt aliquam?
-                    Vitae repudiandae omnis eos nisi?</p>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit aperiam, odit alias nobis nihil
                     quibusdam soluta ratione, voluptate sint, voluptatibus qui voluptatum. Deserunt, cumque recusandae
                     corporis ex consequatur harum dolor!</p>
