--- a/colours/index.html
+++ b/colours/index.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/pattern.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/dd8c49730d.js" crossorigin="anonymous"></script>
 </head>
 
@@ -56,7 +57,7 @@
             </div>
         </div>
         <div class="introduction row">
-            <div class="col-12 col-lg-6">
+            <div class="col-12 col-lg-6 pattern-horizontal-stripes-xl">
                 <img class="image1" src="./assets/Teal Fuchsia 2.jpg" alt="">
             </div>
             <div class="col-12 col-lg-6 sissejuhatus">
@@ -72,7 +73,7 @@
             </div>
         </div>
         <div class="introphotos row">
-            <div class="col-12 col-lg-4">
+            <div class="col-12 col-lg-4 pattern-horizontal-stripes-xl">
                 <img class="image2" src="./assets/Teal Fuchsia.jpg" alt="">
             </div>
             <div class="col-12 col-lg-4 introfotod">
@@ -82,7 +83,7 @@
                     nulla. Delectus culpa veniam quasi nam nemo, necessitatibus tempora corporis autem sunt aliquam?
                     Vitae repudiandae omnis eos nisi?</p>
             </div>
-            <div class="col-12 col-lg-4">
+            <div class="col-12 col-lg-4 pattern-horizontal-stripes-xl">
                 <img class="image2" src="./assets/Teal kardin.jpg" alt="">
             </div>
         </div>
@@ -97,12 +98,12 @@
                     nulla. Delectus culpa veniam quasi nam nemo, necessitatibus tempora corporis autem sunt aliquam?
                     Vitae repudiandae omnis eos nisi?</p>
             </div>
-            <div class="col-12 col-lg-6">
+            <div class="col-12 col-lg-6 pattern-horizontal-stripes-xl">
                 <img class="image1" src="./assets/Teal and pink books.jpg" alt="">
             </div>
         </div>
         <div class="lastpart row">
-            <div class="col-12 col-lg-6">
+            <div class="col-12 col-lg-6 pattern-horizontal-stripes-xl">
                 <img class="image1" src="./assets/teal rosepink copper.jpg" alt="">
             </div>
             <div class="col-12 col-lg-6 viimaneosa">
